--- a/docs/src/app/commands/page.mdx
+++ b/docs/src/app/commands/page.mdx
@@ -1,13 +1,11 @@
-import { CodeBlock } from "@/components/code-block";
+export const metadata = { title: "Commands" }
 
-export default function Commands() {
-  return (
-    <div className="max-w-2xl mx-auto px-4 sm:px-6 py-8 sm:py-12">
-      <div className="prose">
-        <h1>Commands</h1>
+# Commands
 
-        <h2>Core</h2>
-        <CodeBlock code={`agent-browser open <url>              # Navigate (aliases: goto, navigate)
+## Core
+
+```bash
+agent-browser open <url>              # Navigate (aliases: goto, navigate)
 agent-browser click <sel>             # Click element
 agent-browser dblclick <sel>          # Double-click
 agent-browser fill <sel> <text>       # Clear and fill
@@ -21,67 +19,96 @@ agent-browser scroll <dir> [px]       # Scroll (up/down/left/right)
 agent-browser screenshot [path]       # Screenshot (--full for full page)
 agent-browser snapshot                # Accessibility tree with refs
 agent-browser eval <js>               # Run JavaScript
-agent-browser close                   # Close browser`} />
+agent-browser close                   # Close browser
+```
 
-        <h2>Get info</h2>
-        <CodeBlock code={`agent-browser get text <sel>          # Get text content
+## Get info
+
+```bash
+agent-browser get text <sel>          # Get text content
 agent-browser get html <sel>          # Get innerHTML
 agent-browser get value <sel>         # Get input value
 agent-browser get attr <sel> <attr>   # Get attribute
 agent-browser get title               # Get page title
 agent-browser get url                 # Get current URL
 agent-browser get count <sel>         # Count matching elements
-agent-browser get box <sel>           # Get bounding box`} />
+agent-browser get box <sel>           # Get bounding box
+```
 
-        <h2>Check state</h2>
-        <CodeBlock code={`agent-browser is visible <sel>        # Check if visible
+## Check state
+
+```bash
+agent-browser is visible <sel>        # Check if visible
 agent-browser is enabled <sel>        # Check if enabled
-agent-browser is checked <sel>        # Check if checked`} />
+agent-browser is checked <sel>        # Check if checked
+```
 
-        <h2>Find elements</h2>
-        <p>Semantic locators with actions (<code>click</code>, <code>fill</code>, <code>check</code>, <code>hover</code>, <code>text</code>):</p>
-        <CodeBlock code={`agent-browser find role <role> <action> [value]
+## Find elements
+
+Semantic locators with actions (`click`, `fill`, `check`, `hover`, `text`):
+
+```bash
+agent-browser find role <role> <action> [value]
 agent-browser find text <text> <action>
 agent-browser find label <label> <action> [value]
 agent-browser find placeholder <ph> <action> [value]
 agent-browser find testid <id> <action> [value]
 agent-browser find first <sel> <action> [value]
-agent-browser find nth <n> <sel> <action> [value]`} />
-        <p>Examples:</p>
-        <CodeBlock code={`agent-browser find role button click --name "Submit"
-agent-browser find label "Email" fill "test@test.com"
-agent-browser find first ".item" click`} />
+agent-browser find nth <n> <sel> <action> [value]
+```
 
-        <h2>Wait</h2>
-        <CodeBlock code={`agent-browser wait <selector>         # Wait for element
+Examples:
+
+```bash
+agent-browser find role button click --name "Submit"
+agent-browser find label "Email" fill "test@test.com"
+agent-browser find first ".item" click
+```
+
+## Wait
+
+```bash
+agent-browser wait <selector>         # Wait for element
 agent-browser wait <ms>               # Wait for time
 agent-browser wait --text "Welcome"   # Wait for text
 agent-browser wait --url "**/dash"    # Wait for URL pattern
 agent-browser wait --load networkidle # Wait for load state
 agent-browser wait --fn "condition"   # Wait for JS condition
-agent-browser wait --download [path]  # Wait for download`} />
+agent-browser wait --download [path]  # Wait for download
+```
 
-        <h2>Downloads</h2>
-        <CodeBlock code={`agent-browser download <sel> <path>   # Click element to trigger download
-agent-browser wait --download [path]  # Wait for any download to complete`} />
+## Downloads
 
-        <h2>Mouse</h2>
-        <CodeBlock code={`agent-browser mouse move <x> <y>      # Move mouse
+```bash
+agent-browser download <sel> <path>   # Click element to trigger download
+agent-browser wait --download [path]  # Wait for any download to complete
+```
+
+## Mouse
+
+```bash
+agent-browser mouse move <x> <y>      # Move mouse
 agent-browser mouse down [button]     # Press button
 agent-browser mouse up [button]       # Release button
-agent-browser mouse wheel <dy> [dx]   # Scroll wheel`} />
+agent-browser mouse wheel <dy> [dx]   # Scroll wheel
+```
 
-        <h2>Settings</h2>
-        <CodeBlock code={`agent-browser set viewport <w> <h>    # Set viewport size
+## Settings
+
+```bash
+agent-browser set viewport <w> <h>    # Set viewport size
 agent-browser set device <name>       # Emulate device ("iPhone 14")
 agent-browser set geo <lat> <lng>     # Set geolocation
 agent-browser set offline [on|off]    # Toggle offline mode
 agent-browser set headers <json>      # Extra HTTP headers
 agent-browser set credentials <u> <p> # HTTP basic auth
-agent-browser set media [dark|light]  # Emulate color scheme`} />
+agent-browser set media [dark|light]  # Emulate color scheme
+```
 
-        <h2>Cookies & storage</h2>
-        <CodeBlock code={`agent-browser cookies                 # Get all cookies
+## Cookies & storage
+
+```bash
+agent-browser cookies                 # Get all cookies
 agent-browser cookies set <name> <val> # Set cookie
 agent-browser cookies clear           # Clear cookies
 
@@ -90,39 +117,54 @@ agent-browser storage local <key>     # Get specific key
 agent-browser storage local set <k> <v>  # Set value
 agent-browser storage local clear     # Clear all
 
-agent-browser storage session         # Same for sessionStorage`} />
+agent-browser storage session         # Same for sessionStorage
+```
 
-        <h2>Network</h2>
-        <CodeBlock code={`agent-browser network route <url>              # Intercept requests
+## Network
+
+```bash
+agent-browser network route <url>              # Intercept requests
 agent-browser network route <url> --abort      # Block requests
 agent-browser network route <url> --body <json>  # Mock response
 agent-browser network unroute [url]            # Remove routes
-agent-browser network requests                 # View tracked requests`} />
+agent-browser network requests                 # View tracked requests
+```
 
-        <h2>Tabs & frames</h2>
-        <CodeBlock code={`agent-browser tab                     # List tabs
+## Tabs & frames
+
+```bash
+agent-browser tab                     # List tabs
 agent-browser tab new [url]           # New tab
 agent-browser tab <n>                 # Switch to tab
 agent-browser tab close [n]           # Close tab
 agent-browser frame <sel>             # Switch to iframe
-agent-browser frame main              # Back to main frame`} />
+agent-browser frame main              # Back to main frame
+```
 
-        <h2>Debug</h2>
-        <CodeBlock code={`agent-browser trace start [path]      # Start trace
+## Debug
+
+```bash
+agent-browser trace start [path]      # Start trace
 agent-browser trace stop [path]       # Stop and save trace
 agent-browser console                 # View console messages
 agent-browser errors                  # View page errors
 agent-browser highlight <sel>         # Highlight element
 agent-browser state save <path>       # Save auth state
-agent-browser state load <path>       # Load auth state`} />
+agent-browser state load <path>       # Load auth state
+```
 
-        <h2>Navigation</h2>
-        <CodeBlock code={`agent-browser back                    # Go back
+## Navigation
+
+```bash
+agent-browser back                    # Go back
 agent-browser forward                 # Go forward
-agent-browser reload                  # Reload page`} />
+agent-browser reload                  # Reload page
+```
 
-        <h2>Global options</h2>
-        <CodeBlock code={`--session <name>         # Isolated browser session
+## Global options
+
+```bash
+--session <name>         # Isolated browser session
 --profile <path>         # Persistent browser profile directory
 --headed                 # Show browser window (not headless)
 --cdp <port>             # Connect via Chrome DevTools Protocol
@@ -134,17 +176,17 @@ agent-browser reload                  # Reload page`} />
 --ignore-https-errors    # Ignore HTTPS certificate errors
 --allow-file-access      # Allow file:// URLs to access local files (Chromium only)
 --json                   # JSON output (for scripts)
---debug                  # Debug output`} />
+--debug                  # Debug output
+```
 
-        <h2>Local files</h2>
-        <p>Open local files (PDFs, HTML) using <code>file://</code> URLs:</p>
-        <CodeBlock code={`agent-browser --allow-file-access open file:///path/to/document.pdf
+## Local files
+
+Open local files (PDFs, HTML) using `file://` URLs:
+
+```bash
+agent-browser --allow-file-access open file:///path/to/document.pdf
 agent-browser --allow-file-access open file:///path/to/page.html
-agent-browser screenshot output.png`} />
-        <p>
-          The <code>--allow-file-access</code> flag enables JavaScript to access other local files. Chromium only.
-        </p>
-      </div>
-    </div>
-  );
-}
+agent-browser screenshot output.png
+```
+
+The `--allow-file-access` flag enables JavaScript to access other local files. Chromium only.
